# OpenGL-learning

./: .gitignore  CMakeLists.txt  README.md
include/Camera/: Camera.h
include/Shader/: Shader.fs  Shader.h  Shader.vs  check_normal.gs  depthShader.vs  explode.gs  geometryShader.fs  geometryShader.vs  instance_shader.vs  lightShader.vs  point_To_house.gs  point_To_line.gs  reflectModelShader.fs  reflectShader.vs  refractShader.fs  refractShader.vs  uniformBufferShader.vs
include/Struct/: Cuboid.h  Geometry.h  Mesh.h  Model.h  Sphere.h  Vertex.h
include/glad/: glad.h
src/: main.cpp
src/Shader/: Shader.fs  Shader.h  Shader.vs  lightShader.fs
src/Struct/: Cuboid.h  Geometry.h  Mesh.h  Sphere.h  Vertex.h
